# kode

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PUBLISHING.md  README.md
.github/workflows/: ci.yml  publish-crates.yml
demo/: Cargo.toml  index.html
demo/src/: main.rs
docs/: CODING_STANDARDS.md
docs/plans/: 2026-04-30-atomic-extension-blocks.md  2026-04-30-contenteditable-rewrite.md
docs/review-logs/: 2026-05-02.md
kode/: Cargo.toml
kode-core/: Cargo.toml
kode-core/src/: buffer.rs  completion.rs  diagnostic.rs  editor.rs  history.rs  lib.rs  marker.rs  selection.rs  transaction.rs
kode-doc/: Cargo.toml
kode-doc/src/: attrs.rs  fragment.rs  lib.rs  mark.rs  node.rs  node_type.rs  parse.rs  position.rs  serialize.rs  slice.rs  step.rs  transform.rs
kode-doc/src/doc_state/: clipboard.rs  editing.rs  formatting.rs  mod.rs  selection.rs  tests.rs  undo.rs
kode-leptos/: Cargo.toml
kode-leptos/src/: completion.rs  diagnostics.rs  editor.css  editor.rs  extension.rs  handle.rs  highlight.rs  keys.rs  lib.rs  markdown_editor_component.rs  schema_diagnostics.rs  theme.rs  toolbar.rs  wysiwyg.css
kode-leptos/src/wysiwyg/: attachment.rs  click.rs  clipboard.rs  cursor.rs  doc_renderer.rs  dom_helpers.rs  mod.rs  popover_position.rs  selection.rs  tree_editor.rs
kode-markdown/: Cargo.toml
kode-markdown/src/: commands.rs  input_rules.rs  lib.rs  markdown_editor.rs  nodes.rs  parse.rs
kode/src/: editor.rs  highlight.rs  lib.rs
spike/: Cargo.toml  index.html
spike/src/: lib.rs
tests/: capture-editor-states.js  code-completion.spec.ts  heading-selection-height.spec.js  package-lock.json  playwright.config.ts  wysiwyg-atomic-blocks.spec.ts  wysiwyg-atomic-clipboard.spec.ts  wysiwyg-cursor-formatting.spec.ts  wysiwyg-cursor-grid.spec.ts  wysiwyg-multiple-spaces.spec.ts  wysiwyg-tables.spec.ts  wysiwyg.spec.ts
tests/specs/code/: 01-initial-load.yaml  02-cursor-on-line.yaml  03-typing-text.yaml  04-text-selection.yaml  05-select-all.yaml  06-current-line-highlight.yaml  07-error-markers.yaml  08-line-numbers.yaml  09-empty-editor.yaml  10-yaml-syntax.yaml  11-long-line-overflow.yaml  12-scroll-large-file.yaml  13-word-selection-double-click.yaml  14-undo-after-typing.yaml
tests/specs/wysiwyg/: 01-initial-render.yaml  02-heading-styles.yaml  03-bold-italic.yaml  04-code-block.yaml  05-list-rendering.yaml  06-cursor-in-text.yaml  07-text-selection.yaml  08-typing-new-paragraph.yaml  09-source-mode.yaml  10-source-to-wysiwyg-roundtrip.yaml  100-enter-mid-ordered-list-renumbering.yaml  101-enter-after-horizontal-rule.yaml  102-enter-at-very-end-of-document.yaml  103-undo-enter-key.yaml  104-undo-enter-inside-bold.yaml  105-undo-multiple-enters.yaml  106-redo-after-undo-enter.yaml  107-enter-on-empty-document.yaml  108-enter-with-multiblock-selection.yaml  109-enter-replaces-selected-text.yaml  11-blockquote.yaml  110-paste-multiline-into-paragraph.yaml  111-enter-after-very-long-line.yaml  112-enter-between-adjacent-bold-spans.yaml  113-shift-enter-in-heading.yaml  114-enter-at-start-of-only-paragraph.yaml  115-backspace-merges-heading-into-paragraph.yaml  116-enter-splits-inline-code-at-boundary.yaml  117-delete-across-formatting-boundary.yaml  118-rapid-enter-backspace-cycle.yaml  119-enter-in-single-char-bold.yaml  12-horizontal-rule.yaml  120-enter-after-backspace-merged-line.yaml  13-inline-code.yaml  14-link-rendering.yaml  15-bold-in-list.yaml  16-toolbar-bold-toggle.yaml  17-toolbar-heading-toggle.yaml  18-empty-wysiwyg.yaml  19-emphasis-italic.yaml  (+80 more)
