[package]
name = "kode-demo"
description = "Live demo for the kode editor crates"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
kode-leptos = { path = "../kode-leptos" }
leptos = { version = "0.8", features = ["csr"] }
console_log = "1"
console_error_panic_hook = "0.1"
log = "0.4"

[lints]
workspace = true
