[package]
name = "kode-demo"
description = "Live demo for the kode editor crates"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
kode-leptos = { path = "../kode-leptos" }
leptos = { version = "0.8", features = ["csr"] }
console_log = "1"
console_error_panic_hook = "0.1"
log = "0.4"

# The demo showcases every language, so it opts in to all arborium grammars.
# Consumers of kode-leptos only need to enable the languages they actually use.
arborium = { version = "2.16", default-features = false, features = [
    "lang-sql", "lang-yaml", "lang-markdown",
    "lang-javascript", "lang-typescript", "lang-python", "lang-rust",
    "lang-go", "lang-html", "lang-css", "lang-json",
    "lang-bash", "lang-c", "lang-cpp", "lang-java",
] }

[lints]
workspace = true
