[package]
name = "kode-core"
description = "Framework-agnostic text editor core — buffer, selection, undo, and edit primitives built on ropey"
keywords = ["editor", "text", "buffer", "ropey", "editing"]
categories = ["text-editors", "data-structures"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
ropey = "1"

[lints]
workspace = true
