[package]
name = "kode-doc"
description = "Tree-based structured document model for WYSIWYG text editing — nodes, marks, fragments, transforms, undo"
keywords = ["editor", "document", "tree", "prosemirror", "wysiwyg"]
categories = ["text-editors", "data-structures"]
version.workspace = true
edition = "2024"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
arborium-tree-sitter = "2.16"
arborium-markdown = "2.16"
smallvec = "1"

[lints]
workspace = true
