[package]
name = "kode-leptos"
version = "0.2.0-alpha.1"
edition = "2021"
description = "A fast Leptos code editor component built on kode-core"
license = "MIT"

[dependencies]
kode-core = { path = "../kode-core" }
kode-doc = { path = "../kode-doc" }
kode-markdown = { path = "../kode-markdown" }
arborium-tree-sitter = "2.16"
leptos = { version = "0.8", features = ["csr"] }
arborium = { version = "2.16", default-features = false, features = [
    "lang-sql", "lang-yaml", "lang-markdown",
    "lang-javascript", "lang-typescript", "lang-python", "lang-rust",
    "lang-go", "lang-html", "lang-css", "lang-json",
    "lang-bash", "lang-c", "lang-cpp", "lang-java",
] }
arborium-theme = "2.16"
web-sys = { version = "0.3", features = [
    "HtmlTextAreaElement",
    "HtmlElement",
    "HtmlDivElement",
    "KeyboardEvent",
    "InputEvent",
    "MouseEvent",
    "DomRect",
    "DomRectList",
    "Window",
    "Document",
    "Element",
    "Node",
    "NodeList",
    "Range",
    "WheelEvent",
    "FocusEvent",
    "CompositionEvent",
    "ClipboardEvent",
    "DataTransfer",
    "HtmlPreElement",
    "HtmlSpanElement",
    "CssStyleDeclaration",
] }
send_wrapper = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
log = "0.4"
boon = { version = "0.6", optional = true }
serde_json = { version = "1", optional = true }
serde-saphyr = { version = "0.0", optional = true }
saphyr-parser = { version = "0.0", optional = true }

[features]
schema = ["dep:boon", "dep:serde_json", "dep:serde-saphyr", "dep:saphyr-parser"]

[lints]
workspace = true
