[package]
name = "kode-markdown"
description = "Markdown intelligence for the kode editor — parsing, formatting commands, and input rules"
keywords = ["editor", "markdown", "parser", "formatter", "commonmark"]
categories = ["text-editors", "text-processing"]
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
kode-core = { path = "../kode-core", version = "0.2.1" }
arborium-tree-sitter = "2.16"
arborium-markdown = "2.16"

[lints]
workspace = true
