[package]
name = "kode"
version = "0.1.0"
edition = "2021"
description = "A native Rust code editor component for Leptos"
license = "MIT"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
editor-core = "0.3"
arborium = { version = "2.16", default-features = false, features = [
    "lang-sql", "lang-yaml", "lang-markdown",
    "lang-javascript", "lang-typescript", "lang-python", "lang-rust",
    "lang-go", "lang-html", "lang-css", "lang-json",
    "lang-bash", "lang-c", "lang-cpp", "lang-java",
] }
arborium-theme = "2.16"
web-sys = { version = "0.3", features = [
    "HtmlTextAreaElement",
    "HtmlElement",
    "KeyboardEvent",
    "InputEvent",
    "MouseEvent",
    "DomRect",
    "DomRectList",
    "Window",
    "Document",
    "Element",
    "Node",
    "NodeList",
    "Range",
    "FocusEvent",
    "CompositionEvent",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
log = "0.4"
